// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Social Media Share Default renders correctly with extra attributes 1`] = `
<div
  class="ecl-social-media-share"
  data-test="data-test-value"
  data-test-1="data-test-value-1"
>
  <p
    class="ecl-social-media-share__description"
  >
    Share this page
  </p>
  <ul
    class="ecl-social-media-share__list"
  >
    <li
      class="ecl-social-media-share__item"
    >
      <a
        class="ecl-link ecl-link--standalone ecl-link--icon ecl-link--icon-before ecl-social-media-share__link ecl-social-media-share__link--twitter"
        href="/example"
      >
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--xl ecl-link__icon ecl-social-media-share__icon"
          focusable="false"
        >
          <use
            xlink:href="/icons-social.svg#twitter"
          />
        </svg>
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--xl ecl-link__icon ecl-social-media-share__icon-hover"
          focusable="false"
        >
          <use
            xlink:href="/icons-social.svg#twitter_hover"
          />
        </svg>
         
        <span
          class="ecl-link__label"
        >
          Twitter
        </span>
      </a>
    </li>
    <li
      class="ecl-social-media-share__item"
    >
      <a
        class="ecl-link ecl-link--standalone ecl-link--icon ecl-link--icon-before ecl-social-media-share__link ecl-social-media-share__link--facebook"
        href="/example"
      >
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--xl ecl-link__icon ecl-social-media-share__icon"
          focusable="false"
        >
          <use
            xlink:href="/icons-social.svg#facebook"
          />
        </svg>
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--xl ecl-link__icon ecl-social-media-share__icon-hover"
          focusable="false"
        >
          <use
            xlink:href="/icons-social.svg#facebook_hover"
          />
        </svg>
         
        <span
          class="ecl-link__label"
        >
          Facebook
        </span>
      </a>
    </li>
    <li
      class="ecl-social-media-share__item"
    >
      <a
        class="ecl-link ecl-link--standalone ecl-link--icon ecl-link--icon-before ecl-social-media-share__link ecl-social-media-share__link--instagram"
        href="/example"
      >
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--xl ecl-link__icon ecl-social-media-share__icon"
          focusable="false"
        >
          <use
            xlink:href="/icons-social.svg#instagram"
          />
        </svg>
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--xl ecl-link__icon ecl-social-media-share__icon-hover"
          focusable="false"
        >
          <use
            xlink:href="#instagram_hover"
          />
        </svg>
         
        <span
          class="ecl-link__label"
        >
          Instagram
        </span>
      </a>
    </li>
    <li
      class="ecl-social-media-share__item"
    >
      <a
        class="ecl-link ecl-link--standalone ecl-link--icon ecl-link--icon-before ecl-social-media-share__link ecl-social-media-share__link--linkedin"
        href="/example"
      >
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--xl ecl-link__icon ecl-social-media-share__icon"
          focusable="false"
        >
          <use
            xlink:href="/icons-social.svg#linkedin"
          />
        </svg>
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--xl ecl-link__icon ecl-social-media-share__icon-hover"
          focusable="false"
        >
          <use
            xlink:href="/icons-social.svg#linkedin_hover"
          />
        </svg>
         
        <span
          class="ecl-link__label"
        >
          Linkedin
        </span>
      </a>
    </li>
    <li
      class="ecl-social-media-share__item"
    >
      <a
        class="ecl-link ecl-link--standalone ecl-link--icon ecl-link--icon-before ecl-social-media-share__link ecl-social-media-share__link--email"
        href="/example"
      >
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--xl ecl-link__icon ecl-social-media-share__icon"
          focusable="false"
        >
          <use
            xlink:href="/icons-social.svg#email"
          />
        </svg>
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--xl ecl-link__icon ecl-social-media-share__icon-hover"
          focusable="false"
        >
          <use
            xlink:href="/icons-social.svg#email_hover"
          />
        </svg>
         
        <span
          class="ecl-link__label"
        >
          E-mail
        </span>
      </a>
    </li>
    <li
      class="ecl-social-media-share__item"
    >
      <a
        class="ecl-link ecl-link--standalone ecl-social-media-share__link"
        href="/example"
      >
        Other social networks
      </a>
    </li>
  </ul>
</div>
`;

exports[`Social Media Share Default renders correctly with extra class names 1`] = `
<div
  class="ecl-social-media-share custom-class custom-class--test"
>
  <p
    class="ecl-social-media-share__description"
  >
    Share this page
  </p>
  <ul
    class="ecl-social-media-share__list"
  >
    <li
      class="ecl-social-media-share__item"
    >
      <a
        class="ecl-link ecl-link--standalone ecl-link--icon ecl-link--icon-before ecl-social-media-share__link ecl-social-media-share__link--twitter"
        href="/example"
      >
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--xl ecl-link__icon ecl-social-media-share__icon"
          focusable="false"
        >
          <use
            xlink:href="/icons-social.svg#twitter"
          />
        </svg>
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--xl ecl-link__icon ecl-social-media-share__icon-hover"
          focusable="false"
        >
          <use
            xlink:href="/icons-social.svg#twitter_hover"
          />
        </svg>
         
        <span
          class="ecl-link__label"
        >
          Twitter
        </span>
      </a>
    </li>
    <li
      class="ecl-social-media-share__item"
    >
      <a
        class="ecl-link ecl-link--standalone ecl-link--icon ecl-link--icon-before ecl-social-media-share__link ecl-social-media-share__link--facebook"
        href="/example"
      >
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--xl ecl-link__icon ecl-social-media-share__icon"
          focusable="false"
        >
          <use
            xlink:href="/icons-social.svg#facebook"
          />
        </svg>
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--xl ecl-link__icon ecl-social-media-share__icon-hover"
          focusable="false"
        >
          <use
            xlink:href="/icons-social.svg#facebook_hover"
          />
        </svg>
         
        <span
          class="ecl-link__label"
        >
          Facebook
        </span>
      </a>
    </li>
    <li
      class="ecl-social-media-share__item"
    >
      <a
        class="ecl-link ecl-link--standalone ecl-link--icon ecl-link--icon-before ecl-social-media-share__link ecl-social-media-share__link--instagram"
        href="/example"
      >
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--xl ecl-link__icon ecl-social-media-share__icon"
          focusable="false"
        >
          <use
            xlink:href="/icons-social.svg#instagram"
          />
        </svg>
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--xl ecl-link__icon ecl-social-media-share__icon-hover"
          focusable="false"
        >
          <use
            xlink:href="#instagram_hover"
          />
        </svg>
         
        <span
          class="ecl-link__label"
        >
          Instagram
        </span>
      </a>
    </li>
    <li
      class="ecl-social-media-share__item"
    >
      <a
        class="ecl-link ecl-link--standalone ecl-link--icon ecl-link--icon-before ecl-social-media-share__link ecl-social-media-share__link--linkedin"
        href="/example"
      >
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--xl ecl-link__icon ecl-social-media-share__icon"
          focusable="false"
        >
          <use
            xlink:href="/icons-social.svg#linkedin"
          />
        </svg>
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--xl ecl-link__icon ecl-social-media-share__icon-hover"
          focusable="false"
        >
          <use
            xlink:href="/icons-social.svg#linkedin_hover"
          />
        </svg>
         
        <span
          class="ecl-link__label"
        >
          Linkedin
        </span>
      </a>
    </li>
    <li
      class="ecl-social-media-share__item"
    >
      <a
        class="ecl-link ecl-link--standalone ecl-link--icon ecl-link--icon-before ecl-social-media-share__link ecl-social-media-share__link--email"
        href="/example"
      >
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--xl ecl-link__icon ecl-social-media-share__icon"
          focusable="false"
        >
          <use
            xlink:href="/icons-social.svg#email"
          />
        </svg>
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--xl ecl-link__icon ecl-social-media-share__icon-hover"
          focusable="false"
        >
          <use
            xlink:href="/icons-social.svg#email_hover"
          />
        </svg>
         
        <span
          class="ecl-link__label"
        >
          E-mail
        </span>
      </a>
    </li>
    <li
      class="ecl-social-media-share__item"
    >
      <a
        class="ecl-link ecl-link--standalone ecl-social-media-share__link"
        href="/example"
      >
        Other social networks
      </a>
    </li>
  </ul>
</div>
`;

exports[`Social Media Share Default view renders correctly 1`] = `
<div
  class="ecl-social-media-share"
>
  <p
    class="ecl-social-media-share__description"
  >
    Share this page
  </p>
  <ul
    class="ecl-social-media-share__list"
  >
    <li
      class="ecl-social-media-share__item"
    >
      <a
        class="ecl-link ecl-link--standalone ecl-link--icon ecl-link--icon-before ecl-social-media-share__link ecl-social-media-share__link--twitter"
        href="/example"
      >
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--xl ecl-link__icon ecl-social-media-share__icon"
          focusable="false"
        >
          <use
            xlink:href="/icons-social.svg#twitter"
          />
        </svg>
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--xl ecl-link__icon ecl-social-media-share__icon-hover"
          focusable="false"
        >
          <use
            xlink:href="/icons-social.svg#twitter_hover"
          />
        </svg>
         
        <span
          class="ecl-link__label"
        >
          Twitter
        </span>
      </a>
    </li>
    <li
      class="ecl-social-media-share__item"
    >
      <a
        class="ecl-link ecl-link--standalone ecl-link--icon ecl-link--icon-before ecl-social-media-share__link ecl-social-media-share__link--facebook"
        href="/example"
      >
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--xl ecl-link__icon ecl-social-media-share__icon"
          focusable="false"
        >
          <use
            xlink:href="/icons-social.svg#facebook"
          />
        </svg>
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--xl ecl-link__icon ecl-social-media-share__icon-hover"
          focusable="false"
        >
          <use
            xlink:href="/icons-social.svg#facebook_hover"
          />
        </svg>
         
        <span
          class="ecl-link__label"
        >
          Facebook
        </span>
      </a>
    </li>
    <li
      class="ecl-social-media-share__item"
    >
      <a
        class="ecl-link ecl-link--standalone ecl-link--icon ecl-link--icon-before ecl-social-media-share__link ecl-social-media-share__link--instagram"
        href="/example"
      >
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--xl ecl-link__icon ecl-social-media-share__icon"
          focusable="false"
        >
          <use
            xlink:href="/icons-social.svg#instagram"
          />
        </svg>
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--xl ecl-link__icon ecl-social-media-share__icon-hover"
          focusable="false"
        >
          <use
            xlink:href="#instagram_hover"
          />
        </svg>
         
        <span
          class="ecl-link__label"
        >
          Instagram
        </span>
      </a>
    </li>
    <li
      class="ecl-social-media-share__item"
    >
      <a
        class="ecl-link ecl-link--standalone ecl-link--icon ecl-link--icon-before ecl-social-media-share__link ecl-social-media-share__link--linkedin"
        href="/example"
      >
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--xl ecl-link__icon ecl-social-media-share__icon"
          focusable="false"
        >
          <use
            xlink:href="/icons-social.svg#linkedin"
          />
        </svg>
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--xl ecl-link__icon ecl-social-media-share__icon-hover"
          focusable="false"
        >
          <use
            xlink:href="/icons-social.svg#linkedin_hover"
          />
        </svg>
         
        <span
          class="ecl-link__label"
        >
          Linkedin
        </span>
      </a>
    </li>
    <li
      class="ecl-social-media-share__item"
    >
      <a
        class="ecl-link ecl-link--standalone ecl-link--icon ecl-link--icon-before ecl-social-media-share__link ecl-social-media-share__link--email"
        href="/example"
      >
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--xl ecl-link__icon ecl-social-media-share__icon"
          focusable="false"
        >
          <use
            xlink:href="/icons-social.svg#email"
          />
        </svg>
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--xl ecl-link__icon ecl-social-media-share__icon-hover"
          focusable="false"
        >
          <use
            xlink:href="/icons-social.svg#email_hover"
          />
        </svg>
         
        <span
          class="ecl-link__label"
        >
          E-mail
        </span>
      </a>
    </li>
    <li
      class="ecl-social-media-share__item"
    >
      <a
        class="ecl-link ecl-link--standalone ecl-social-media-share__link"
        href="/example"
      >
        Other social networks
      </a>
    </li>
  </ul>
</div>
`;
